{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "b3555ca9-546b-4d9a-9e5e-28f9deb55a71",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "bd5f6e97-5d5e-4d5c-b75a-bc921483b9ae",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "1326bf7e-479c-472e-8054-6ffc150bb1c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8b5ca1a5-e4f3-445f-8bbc-b81f3d6162d1",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d4216b6-ab36-471f-8fab-972546478a8f",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}